Huge project code changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,15 +19,10 @@ else()
   add_compile_definitions(NDEBUG)
 endif()
 
-set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build shared libraries" FORCE)
-if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
-  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-libstdc++")
-  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -static-libgcc -static-libstdc++")
-elseif(MSVC)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MT")  # Static runtime for MSVC
-endif()
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
-# 1. Download git submodules
 find_package(Git QUIET)
 if(GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
   option(GIT_SUBMODULE "Check submodules during build" ON)
@@ -42,66 +37,6 @@ if(GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
   endif()
 endif()
 
-# 2. Add dependencies
 add_subdirectory(external)
-
-add_library(deps INTERFACE)
-
-target_link_libraries(deps INTERFACE
-  vulkan
-  shaderc
-  glfw
-  glm
-  imgui
-)
-
-# 3. Store source files
-file(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp)
-
-# 4. Build project platform specific
-if(UNIX AND NOT APPLE)  # Linux
-  message(STATUS "Creating build for linux")
-
-  add_library(${PROJECT_NAME} SHARED ${SOURCES})
-  
-  target_include_directories(${PROJECT_NAME} PRIVATE
-    ${PROJECT_SOURCE_DIR}/src
-    ${PROJECT_SOURCE_DIR}/include
-  )
-
-  target_link_libraries(${PROJECT_NAME} PRIVATE
-    deps
-    dl
-  )
-
-  set_target_properties(${PROJECT_NAME} PROPERTIES 
-    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
-    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
-    OUTPUT_NAME hephaestus
-  )
-
-  target_compile_options(${PROJECT_NAME} PRIVATE -fPIC)
-elseif(WIN32)  # Windows
-  message(STATUS "Creating build for windows")
-
-  add_library(${PROJECT_NAME} SHARED ${SOURCES})
-
-  target_include_directories(${PROJECT_NAME} PRIVATE
-    ${PROJECT_SOURCE_DIR}/src
-    ${PROJECT_SOURCE_DIR}/include
-  )
-
-  target_link_libraries(${PROJECT_NAME} PRIVATE
-    deps
-  )
-
-  set_target_properties(${PROJECT_NAME} PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
-    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
-    OUTPUT_NAME hephaestus
-    WINDOWS_EXPORT_ALL_SYMBOLS ON 
-  )
-endif()
-
-target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
-set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/build")
+add_subdirectory(engine)
+add_subdirectory(testbed)
