--- a/testbed/CMakeLists.txt
+++ b/testbed/CMakeLists.txt
@@ -1,25 +1,27 @@
-cmake_minimum_required(VERSION 3.22.2)
-
 set(NAME testbed)
-project(${NAME})
+set(ENGINE_NAME ${PROJECT_NAME})
 
-enable_language(CXX)
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+file(GLOB_RECURSE SOURCES *.cpp src/*.cpp)
 
-find_library(HEPHAESTUS_LIB 
-    NAMES hephaestus 
-    HINTS "${CMAKE_SOURCE_DIR}/../build"
-    REQUIRED
+add_library(deps INTERFACE)
+
+target_link_libraries(deps INTERFACE
+  ${ENGINE_NAME}
+  vulkan
+  shaderc
+  glfw
+  glm
+  imgui
 )
+
+target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
+set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/build")
 
 add_executable(testbed main.cpp)
 
-target_include_directories(testbed PRIVATE "${CMAKE_SOURCE_DIR}/../include")
-target_link_libraries(testbed PRIVATE ${HEPHAESTUS_LIB})
+target_link_libraries(testbed PRIVATE deps)
 
-set_target_properties(testbed PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
-    OUTPUT_NAME testbed.bin
-    BUILD_RPATH "${CMAKE_BINARY_DIR}/../build"
+target_include_directories(testbed PRIVATE 
+    "${CMAKE_SOURCE_DIR}/engine/include" 
+    "${CMAKE_SOURCE_DIR}/external/imgui"
 )
