--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -26,7 +26,7 @@ jobs:
         uses: humbletim/setup-vulkan-sdk@v1.2.1
         with:
           vulkan-query-version: 1.4.304.1
-          vulkan-components: Vulkan-Headers, Vulkan-Loader, SPIRV-Headers, SPIRV-Cross, SPIRV-Tools, SPIRV-Reflect, Glslang
+          vulkan-components: Vulkan-Headers, Vulkan-Loader, SPIRV-Headers, SPIRV-Cross, SPIRV-Tools, SPIRV-Reflect, Glslang, shaderc
           vulkan-use-cache: true
 
       - name: Test Vulkan SDK Install
@@ -57,16 +57,16 @@ jobs:
       - name: Package Project Build
         shell: bash
         run: |
-          mkdir hephaestus
-          cp build/libhephaestus.so hephaestus/libhephaestus.so
-          cp -r include/ hephaestus/include
-          tar czf hephaestus-linux-${{ steps.generate_next_tag.outputs.next_release_tag }}.tar.gz hephaestus
+          mkdir alphane
+          cp build/lib/libalphane.a alphane/libalphane.a
+          cp -r engine/include/ alphane/include
+          tar czf alphane-linux-${{ steps.generate_next_tag.outputs.next_release_tag }}.tar.gz alphane
 
       - name: Upload Engine Artifact
         uses: actions/upload-artifact@v4
         with:
           name: engine-linux
-          path: hephaestus-linux-*.tar.gz
+          path: alphane-linux-*.tar.gz
 
   windows-build:
     runs-on: windows-latest
@@ -92,7 +92,7 @@ jobs:
         uses: humbletim/setup-vulkan-sdk@v1.2.1
         with:
           vulkan-query-version: 1.4.304.1
-          vulkan-components: Vulkan-Headers, Vulkan-Loader, SPIRV-Headers, SPIRV-Cross, SPIRV-Tools, SPIRV-Reflect, Glslang
+          vulkan-components: Vulkan-Headers, Vulkan-Loader, SPIRV-Headers, SPIRV-Cross, SPIRV-Tools, SPIRV-Reflect, Glslang, shaderc
           vulkan-use-cache: true
 
       - name: Build Project
@@ -108,23 +108,23 @@ jobs:
         run: |
           Get-ChildItem -Force
           Get-ChildItem -Force build/
-          Get-ChildItem -Force build/bin
+          Get-ChildItem -Force build/lib
           Get-ChildItem -Force build/x64
 
       - name: Package Project Build
         shell: powershell
         run: |
-          $OutputDir = "hephaestus"
+          $OutputDir = "alphane"
           New-Item -ItemType Directory -Path $OutputDir -Force
-          Copy-Item -Path "build/bin/Release/hephaestus.dll" -Destination "$OutputDir"
-          Copy-Item -Path "include\*" -Destination "$OutputDir\include" -Recurse -Force
-          Compress-Archive -Path "$OutputDir" -DestinationPath "hephaestus-windows-${{ steps.generate_next_tag.outputs.next_release_tag }}.zip"
+          Copy-Item -Path "build/lib/Release/alphane.lib" -Destination "$OutputDir"
+          Copy-Item -Path "engine\include\*" -Destination "$OutputDir\include" -Recurse -Force
+          Compress-Archive -Path "$OutputDir" -DestinationPath "alphane-windows-${{ steps.generate_next_tag.outputs.next_release_tag }}.zip"
 
       - name: Upload Engine Artifact
         uses: actions/upload-artifact@v4
         with:
           name: engine-windows
-          path: hephaestus-windows-*.zip
+          path: alphane-windows-*.zip
 
   create-release:
     runs-on: ubuntu-latest
@@ -157,6 +157,6 @@ jobs:
         with:
           tag: ${{ steps.generate_next_tag.outputs.next_release_tag }}
           artifacts: |
-            ./hephaestus-linux-*.tar.gz
-            ./hephaestus-windows-*.zip
+            ./alphane-linux-*.tar.gz
+            ./alphane-windows-*.zip
           draft: false
