renaming project to alphane

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -91,7 +91,7 @@
     "typeinfo": "cpp",
     "variant": "cpp",
     "any": "cpp",
-    "hephaestus": "cpp",
+    "alphane": "cpp",
     "bitset": "cpp",
     "complex": "cpp",
     "condition_variable": "cpp",
