--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 	path = external/imgui
 	url = https://github.com/ocornut/imgui.git
 	branch = docking
+[submodule "external/entt"]
+	path = external/entt
+	url = https://github.com/skypjack/entt.git
