--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,4 +40,4 @@ endif()
 add_subdirectory(external)
 add_subdirectory(engine)
 add_subdirectory(testbed)
-add_subdirectory(editor)
+#add_subdirectory(editor)
